chore: refactor list creation due to Java 17 features